[metadata]
name = hexcover
version = attr: hexcover.util.__version__
description = Given a centroid and side length, tile an area with regular flat hexagons
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/urschrei/hexcover
author = Stephan Hügel
author_email = urschrei@gmail.com
license = MIT
license_file = license.txt
keywords = Geo, Telecoms, Hexagon, GIS
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS
project_urls =
    Source = https://github.com/urschrei/hexcover
    Tracker = https://github.com/urschrei/hexcover/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools_scm
    numpy >= 1.11.0
tests_require = pytest >= 6.2.2
test_suite = test

[bdist_wheel]
universal = 1

[options.extras_require]
numpy =
    numpy >= 1.11.0
test =
    pytest >= 6.2.2
all =
    %(numpy)s
    %(test)s
